solc_mutator_ossfuzz_seed_corpus/test_sol/test_70a19ff69b0550e01d68a02c083eb424717f098f6587b46dac6c2e6ab08acf9d_add707da1e2b34fa49fd072541bff446abb9dfad_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  fallback() external   payable
  {
    uint56 l0 = uint56(41384544409819128);
  }
  uint8   s0;
  bytes12  public s1;
  address payable immutable public s2;
  bytes3 immutable  s3 = bytes3(0x59c66c);
  constructor(uint8 i0,bytes12 i1,address payable i2)   {
    s0 -= uint8(0);
    s1 &= bytes12(0x158bb72db13400d1dfd40530);
    s2 = payable(address(this));
    unchecked {
      revert(string("6600ea3573afa19423f506bf45969a39ffff"));
    }
  }
}
library L0 {
  error er0();
}
library L1 {
  function f1() public   
  {
    {
      int216[2] memory l0 = [int216(52656145834278593348959013841835216159447547700274555627155488767), int216(52656145834278593348959013841835216159447547700274555627155488767)];
      revert(string("0000000000000000000000000000005bd114528d577d82fb6442edf937820092d3cbb302"));
    }
    bytes memory l1 = (false ? bytes.concat(bytes15(0x9fcc65b031c180bf2cda1fb3675cea)) : (true ? bytes("00000000000000000000000000000000000000000000") : bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff")));
    int56 l2 = (((-(int56(36028797018963967))) % (~(int56(0)))) + int56(0));
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 3628: (su0.sol:0-462): This contract has a payable fallback function, but no receive ether function. Consider adding a receive ether function.
// Warning 5740: (su0.sol:830-1066): Unreachable code.
// Warning 5740: (su0.sol:1072-1143): Unreachable code.
// Warning 2072: (su0.sol:54-63): Unused local variable.
// Warning 5667: (su0.sol:229-237): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:238-248): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:249-267): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:548-567): Unused local variable.
// Warning 2072: (su0.sol:830-845): Unused local variable.
// Warning 2072: (su0.sol:1072-1080): Unused local variable.
// Warning 2018: (su0.sol:508-1148): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
